# dcos-k8s-rust-skaffold-demo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  skaffold-deployment.yaml  skaffold.yaml
k8s/: nginx-default-backend.yaml  nginx-ingress-controller.yaml  nginx-service-account.yaml
src/: api.rs  main.rs
src/protos/: helloworld.rs  helloworld_grpc.rs
src/protos/proto/: helloworld.proto
