[package]
name = "rust-web-demo"
version = "0.1.0"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.3.9"
rocket_codegen = "0.3.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.3.9"
default-features = false
features = ["json"]
